Disable systick for esp32s2 until we can fix the noted issues

--- a/.github/workflows/ci-async.yml
+++ b/.github/workflows/ci-async.yml
@@ -53,7 +53,7 @@ jobs:
         chip_features:
           [
             { chip: esp32, features: "embassy,embassy-time-timg" },
-            { chip: esp32s2, features: "embassy,embassy-time-systick" },
+            # { chip: esp32s2, features: "embassy,embassy-time-systick" }, # Removed for now, see esp32s2-hal/Cargo.toml
             { chip: esp32s2, features: "embassy,embassy-time-timg" },
             { chip: esp32s3, features: "embassy,embassy-time-systick" },
             { chip: esp32s3, features: "embassy,embassy-time-timg" },
