--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,9 +55,11 @@ jobs:
             { chip: esp32s3, features: "eh1,smartled,ufmt" },
             { chip: esp32s3, features: "direct-boot,eh1,smartled,ufmt" },
           ]
+    env:
+      RUSTFLAGS: "--cfg target_has_atomic=\"8\" --cfg target_has_atomic=\"16\" --cfg target_has_atomic=\"32\" --cfg target_has_atomic=\"ptr\""
     steps:
       - uses: actions/checkout@v2
-      - uses: esp-rs/xtensa-toolchain@v1.2
+      - uses: esp-rs/xtensa-toolchain@v1.4
         with:
           default: true
           ldproxy: false
