--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -31,6 +31,8 @@ embedded-hal-nb  = { version = "=1.0.0-alpha.1", optional = true }
 esp-hal-common   = { version = "0.2.0",  features = ["esp32"], path = "../esp-hal-common" }
 xtensa-lx        = { version = "0.7.0",  features = ["esp32"] }
 xtensa-lx-rt     = { version = "0.13.0", features = ["esp32"], optional = true }
+embedded-hal-async = { version = "0.1.0-alpha.3", optional = true }
+embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }
 
 [dev-dependencies]
 critical-section  = "1.1.0"
@@ -39,6 +41,8 @@ esp-backtrace     = { version = "0.2.0", features = ["esp32", "panic-handler", "
 esp-println       = { version = "0.3.0", features = ["esp32"] }
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "eed34f945ccd5c4ef2af77230042dd4954e981ac", features = ["nightly", "integrated-timers"] }
+static_cell       = "1.0.0"
 
 [features]
 default   = ["rt", "vectored"]
@@ -48,6 +52,9 @@ rt        = ["xtensa-lx-rt/esp32"]
 smartled  = ["esp-hal-common/smartled"]
 ufmt      = ["esp-hal-common/ufmt"]
 vectored  = ["esp-hal-common/vectored"]
+async = ["esp-hal-common/async", "embedded-hal-async"]
+embassy = ["esp-hal-common/embassy"]
+embassy-time-timg = ["esp-hal-common/embassy-time-timg", "embassy-time/tick-hz-1_000_000"]
 
 [[example]]
 name              = "hello_rgb"
@@ -60,3 +67,7 @@ required-features = ["eh1"]
 [[example]]
 name              = "spi_eh1_device_loopback"
 required-features = ["eh1"]
+
+[[example]]
+name              = "embassy_hello_world"
+required-features = ["embassy"]
