--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -32,6 +32,8 @@ esp-hal-common   = { version = "0.2.0",  features = ["esp32c2"], path = "../esp-
 r0               = "1.0.0"
 riscv            = "0.9.0"
 riscv-rt         = { version = "0.9.0", optional = true }
+embedded-hal-async = { version = "0.1.0-alpha.3", optional = true }
+embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }
 
 [dev-dependencies]
 critical-section  = "1.1.0"
@@ -39,6 +41,8 @@ embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.3.0", features = ["esp32c2", "panic-handler", "exception-handler", "print-uart"] }
 esp-println       = { version = "0.3.0", features = ["esp32c2"] }
 ssd1306           = "0.7.1"
+embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "eed34f945ccd5c4ef2af77230042dd4954e981ac", features = ["nightly", "integrated-timers"] }
+static_cell        = "1.0.0"
 
 [features]
 default     = ["rt", "vectored"]
@@ -47,6 +51,9 @@ eh1         = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"
 rt          = ["riscv-rt"]
 ufmt        = ["esp-hal-common/ufmt"]
 vectored    = ["esp-hal-common/vectored"]
+async = ["esp-hal-common/async", "embedded-hal-async"]
+embassy = ["esp-hal-common/embassy"]
+embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 
 [[example]]
 name              = "spi_eh1_loopback"
@@ -55,3 +62,7 @@ required-features = ["eh1"]
 [[example]]
 name              = "spi_eh1_device_loopback"
 required-features = ["eh1"]
+
+[[example]]
+name              = "embassy_hello_world"
+required-features = ["embassy"]
