--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -17,6 +17,7 @@ critical-section     = "1.1.1"
 embedded-hal         = { version = "0.2.7", features = ["unproven"] }
 embedded-hal-1       = { version = "=1.0.0-alpha.9", optional = true, package = "embedded-hal" }
 embedded-hal-nb      = { version = "=1.0.0-alpha.1", optional = true }
+embedded-can         = { version = "0.4.1", optional = true }
 fugit                = "0.3.6"
 lock_api             = { version = "0.4.9", optional = true }
 nb                   = "1.0.0"
@@ -67,7 +68,7 @@ esp32c2_40mhz = []
 esp32c2_26mhz = []
 
 # Implement the `embedded-hal==1.0.0-alpha.x` traits
-eh1 = ["embedded-hal-1", "embedded-hal-nb"]
+eh1 = ["embedded-hal-1", "embedded-hal-nb", "embedded-can"]
 
 # To use the external `smart_led` crate
 smartled = ["smart-leds-trait"]
