--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -20,7 +20,7 @@ embedded-hal-nb      = { version = "=1.0.0-alpha.1", optional = true }
 fugit                = "0.3.6"
 lock_api             = { version = "0.4.9", optional = true }
 nb                   = "1.0.0"
-paste                = "=1.0.8"
+paste                = "1.0.9"
 procmacros           = { version = "0.1.0", package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
 void                 = { version = "1.0.2", default-features = false }
 embedded-dma         = "0.2.0"
@@ -34,7 +34,7 @@ embassy-time       = { version = "0.1.0", features = ["nightly"], optional = tru
 
 # RISC-V
 riscv                       = { version = "0.10.0", optional = true }
-riscv-atomic-emulation-trap = { version = "0.2.0",  optional = true }
+riscv-atomic-emulation-trap = { version = "0.3.0",  optional = true }
 
 # Xtensa
 xtensa-lx    = { version = "0.7.0",  optional = true }
