Embassy init updates:
- Rename timg feature to timg0 to better refect which TG is being used
- Use the time_driver::TimerType in the signature of init to fix #268
- Update examples
- Fix CI features
- Add timg0 cfg to build.rs

--- a/.github/workflows/ci-async.yml
+++ b/.github/workflows/ci-async.yml
@@ -23,7 +23,9 @@ jobs:
         chip_features:
           [
             { chip: esp32c2, features: "embassy,embassy-time-systick" },
+            { chip: esp32c2, features: "embassy,embassy-time-timg0" },
             { chip: esp32c3, features: "embassy,embassy-time-systick" },
+            { chip: esp32c3, features: "embassy,embassy-time-timg0" },
           ]
         toolchain: [nightly]
         example:
@@ -52,11 +54,11 @@ jobs:
       matrix:
         chip_features:
           [
-            { chip: esp32, features: "embassy,embassy-time-timg" },
+            { chip: esp32, features: "embassy,embassy-time-timg0" },
             # { chip: esp32s2, features: "embassy,embassy-time-systick" }, # Removed for now, see esp32s2-hal/Cargo.toml
-            { chip: esp32s2, features: "embassy,embassy-time-timg" },
+            { chip: esp32s2, features: "embassy,embassy-time-timg0" },
             { chip: esp32s3, features: "embassy,embassy-time-systick" },
-            { chip: esp32s3, features: "embassy,embassy-time-timg" },
+            { chip: esp32s3, features: "embassy,embassy-time-timg0" },
           ]
         example:
           [
