--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -55,7 +55,7 @@ ufmt              = ["esp-hal-common/ufmt"]
 vectored          = ["esp-hal-common/vectored"]
 async             = ["esp-hal-common/async", "embedded-hal-async"]
 embassy           = ["esp-hal-common/embassy"]
-embassy-time-timg = ["esp-hal-common/embassy-time-timg", "embassy-time/tick-hz-1_000_000"]
+embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
 
 [[example]]
 name              = "hello_rgb"
