--- a/esp32c2-hal/.cargo/config.toml
+++ b/esp32c2-hal/.cargo/config.toml
@@ -1,12 +1,12 @@
 [target.riscv32imc-unknown-none-elf]
-runner = "espflash --monitor"
+runner = "espflash flash --monitor"
 rustflags = [
   "-C", "link-arg=-Tlinkall.x"
 ]
 
 # for testing: you can specify this target to see atomic emulation in action
 [target.riscv32imac-unknown-none-elf]
-runner = "espflash --monitor"
+runner = "espflash flash --monitor"
 rustflags = [
   "-C", "link-arg=-Tlinkall.x"
 ]
