--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -56,6 +56,7 @@ ufmt-write = { version = "0.1.0", optional = true }
 esp32   = { version = "0.21.0", features = ["critical-section"], optional = true }
 esp32c2 = { version = "0.8.0",  features = ["critical-section"], optional = true }
 esp32c3 = { version = "0.11.0", features = ["critical-section"], optional = true }
+esp32c6 = { path = "C:/Users/JurajSadel/esp-pacs/esp32c6",  features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.12.0", features = ["critical-section"], optional = true }
 esp32s3 = { version = "0.15.0", features = ["critical-section"], optional = true }
 
@@ -63,6 +64,7 @@ esp32s3 = { version = "0.15.0", features = ["critical-section"], optional = true
 esp32   = ["esp32/rt"  , "xtensa", "xtensa-lx/esp32",   "xtensa-lx-rt/esp32",   "lock_api", "procmacros/esp32"]
 esp32c2 = ["esp32c2/rt", "riscv", "procmacros/esp32c2"]
 esp32c3 = ["esp32c3/rt", "riscv", "procmacros/esp32c3"]
+esp32c6 = ["esp32c6/rt", "riscv", "procmacros/esp32c6"]
 esp32s2 = ["esp32s2/rt", "xtensa", "xtensa-lx/esp32s2", "xtensa-lx-rt/esp32s2",             "esp-synopsys-usb-otg", "usb-device", "procmacros/esp32s2"]
 esp32s3 = ["esp32s3/rt", "xtensa", "xtensa-lx/esp32s3", "xtensa-lx-rt/esp32s3", "lock_api", "esp-synopsys-usb-otg", "usb-device", "procmacros/esp32s3"]
 
