--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 # Cancel any currently running workflows from the same PR, branch, or
 # tag when a new workflow is triggered.
@@ -26,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: esp-rs/xtensa-toolchain@v1.4
+      - uses: esp-rs/xtensa-toolchain@v1.5
         with:
           default: true
           buildtargets: esp32
@@ -117,7 +118,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: esp-rs/xtensa-toolchain@v1.4
+      - uses: esp-rs/xtensa-toolchain@v1.5
         with:
           default: true
           buildtargets: esp32s2
@@ -143,7 +144,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: esp-rs/xtensa-toolchain@v1.4
+      - uses: esp-rs/xtensa-toolchain@v1.5
         with:
           default: true
           buildtargets: esp32s3
@@ -194,7 +195,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: esp-rs/xtensa-toolchain@v1.4
+      - uses: esp-rs/xtensa-toolchain@v1.5
         with:
           ldproxy: false
           version: "1.65.0"
@@ -234,7 +235,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: esp-rs/xtensa-toolchain@v1.4
+      - uses: esp-rs/xtensa-toolchain@v1.5
         with:
           ldproxy: false
       - uses: Swatinem/rust-cache@v1
