--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -14,18 +14,19 @@ license      = "MIT OR Apache-2.0"
 [dependencies]
 cfg-if               = "1.0.0"
 critical-section     = "1.1.1"
+embedded-can         = { version = "0.4.1", optional = true }
+embedded-dma         = "0.2.0"
 embedded-hal         = { version = "0.2.7", features = ["unproven"] }
 embedded-hal-1       = { version = "=1.0.0-alpha.9", optional = true, package = "embedded-hal" }
 embedded-hal-nb      = { version = "=1.0.0-alpha.1", optional = true }
-embedded-can         = { version = "0.4.1", optional = true }
+esp-synopsys-usb-otg = { version = "0.3.1", optional = true, features = ["fs", "esp32sx"] }
 fugit                = "0.3.6"
 lock_api             = { version = "0.4.9", optional = true }
 nb                   = "1.0.0"
 paste                = "1.0.9"
 procmacros           = { version = "0.1.0", package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
+strum                = { version = "0.24.1", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
-embedded-dma         = "0.2.0"
-esp-synopsys-usb-otg = { version = "0.3.1", optional = true, features = ["fs", "esp32sx"] }
 usb-device           = { version = "0.2.9", optional = true }
 
 # async
