--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -50,6 +50,9 @@ usb-device        = { version = "0.2.9" }
 usbd-serial       = "0.1.1"
 static_cell       = "1.0.0"
 
+[patch.crates-io]
+xtensa-lx-rt = { version = "0.14.0", features = ["esp32s3"], git = "https://github.com/esp-rs/xtensa-lx-rt" }
+
 [features]
 default              = ["rt", "vectored"]
 direct-boot          = ["r0"]
