--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -70,3 +70,7 @@ required-features = ["eh1"]
 [[example]]
 name              = "embassy_hello_world"
 required-features = ["embassy"]
+
+[[example]]
+name              = "embassy_wait"
+required-features = ["embassy", "async"]
