--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -35,8 +35,8 @@ embassy-sync       = { version = "0.1.0", optional = true }
 embassy-time       = { version = "0.1.0", features = ["nightly"], optional = true }
 
 # RISC-V
-riscv                       = { version = "0.10.1", optional = true }
-riscv-atomic-emulation-trap = { version = "0.3.1",  optional = true }
+esp-riscv-rt                = { version = "0.1.0", optional = true }
+riscv-atomic-emulation-trap = { version = "0.4.0", optional = true }
 
 # Xtensa
 xtensa-lx    = { version = "0.7.0",  optional = true }
@@ -53,8 +53,8 @@ ufmt-write = { version = "0.1.0", optional = true }
 # corresponding feature. We rename the PAC packages because we cannot
 # have dependencies and features with the same names.
 esp32   = { version = "0.19.0", features = ["critical-section"], optional = true }
-esp32c2 = { version = "0.6.1",  features = ["critical-section"], optional = true }
-esp32c3 = { version = "0.9.1",  features = ["critical-section"], optional = true }
+esp32c2 = { version = "0.7.0",  features = ["critical-section"], optional = true }
+esp32c3 = { version = "0.10.0", features = ["critical-section"], optional = true }
 esp32s2 = { version = "0.10.0", features = ["critical-section"], optional = true }
 esp32s3 = { version = "0.13.0", features = ["critical-section"], optional = true }
 
@@ -88,5 +88,5 @@ embassy-time-systick = []
 embassy-time-timg0   = []
 
 # Architecture-specific features (intended for internal use)
-riscv  = ["dep:riscv", "critical-section/restore-state-u8",  "procmacros/riscv", "riscv-atomic-emulation-trap"]
-xtensa = [             "critical-section/restore-state-u32", "procmacros/xtensa"]
+riscv  = ["critical-section/restore-state-u8",  "procmacros/riscv", "esp-riscv-rt", "riscv-atomic-emulation-trap"]
+xtensa = ["critical-section/restore-state-u32", "procmacros/xtensa"]
