--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -31,9 +31,8 @@ embedded-hal-1     = { version = "=1.0.0-alpha.9", optional = true, package = "e
 embedded-hal-async = { version = "0.1.0-alpha.3", optional = true }
 embedded-hal-nb    = { version = "=1.0.0-alpha.1", optional = true }
 esp-hal-common     = { version = "0.5.0",  features = ["esp32c2"], path = "../esp-hal-common" }
+esp-riscv-rt       = { version = "0.1.0", optional = true }
 r0                 = "1.0.0"
-riscv              = "0.10.1"
-riscv-rt           = { version = "0.11.0", optional = true }
 
 [dev-dependencies]
 critical-section  = "1.1.1"
@@ -49,7 +48,7 @@ static_cell       = "1.0.0"
 default              = ["rt", "vectored", "xtal40mhz"]
 direct-boot          = []
 eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
-rt                   = ["riscv-rt"]
+rt                   = ["esp-riscv-rt"]
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
 async                = ["esp-hal-common/async", "embedded-hal-async"]
