--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -33,11 +33,11 @@ embedded-hal-async = { version = "0.1.0-alpha.3", optional = true }
 embedded-hal-nb    = { version = "=1.0.0-alpha.1", optional = true }
 embedded-can       = { version = "0.4.1", optional = true }
 esp-hal-common     = { version = "0.5.0",  features = ["esp32c3"], path = "../esp-hal-common" }
+esp-riscv-rt       = { version = "0.1.0", optional = true }
 r0                 = "1.0.0"
-riscv              = "0.10.1"
-riscv-rt           = { version = "0.11.0", optional = true }
 
 [dev-dependencies]
+aes               = "0.8.2"
 critical-section  = "1.1.1"
 embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
@@ -47,14 +47,13 @@ sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
 static_cell       = "1.0.0"
-aes = "0.8.2"
 
 [features]
 default              = ["rt", "vectored"]
 mcu-boot             = []
 direct-boot          = []
 eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb", "dep:embedded-can"]
-rt                   = ["riscv-rt"]
+rt                   = ["esp-riscv-rt"]
 smartled             = ["esp-hal-common/smartled"]
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
